[gd_scene load_steps=12 format=3 uid="uid://bmcwnebv4gnh1"]

[ext_resource type="Script" path="res://gameplay/ui/ui.gd" id="1"]
[ext_resource type="FontFile" path="res://assets/ui/fonts/montserrat_eb_16.tres" id="2"]
[ext_resource type="FontFile" uid="uid://cs1nhg4hgf0v2" path="res://assets/ui/fonts/montserrat_eb_32.tres" id="3"]
[ext_resource type="PackedScene" path="res://assets/ui/ui_hp/ui_hp.tscn" id="4"]
[ext_resource type="Script" path="res://addons/SafeArea/SafeArea.gd" id="5"]
[ext_resource type="PackedScene" path="res://assets/ui/hurt/hurt.tscn" id="6"]
[ext_resource type="PackedScene" path="res://assets/ui/result/result.tscn" id="7"]
[ext_resource type="FontFile" path="res://assets/ui/fonts/montserrat_eb_48.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://bhqb4u7neeg6p" path="res://assets/poping/star.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cfc0mxfhd0c40" path="res://assets/ui/icons/score.png" id="10"]
[ext_resource type="PackedScene" uid="uid://dr5rj4h6xgctj" path="res://menu/score/score.tscn" id="11"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="safearea" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/safearea"]
layout_mode = 2

[node name="MarginContainer3" type="HBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ui_hp" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer3" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="label_level" type="Label" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 32
text = "Level : 1"

[node name="score_button" type="Button" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("10")
flat = true
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer2"]
modulate = Color(0.941176, 0.733333, 0, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="label_score" type="Label" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.733333, 0, 1)
theme_override_fonts/font = ExtResource("8")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="GridContainer" type="CenterContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="grid" type="GridContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
columns = 9

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0.141176, 0.141176, 0.141176, 0.654902)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer3" type="CenterContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="word_output_container" type="HBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="find" type="Button" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Find"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="clear" type="Button" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Clear"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="hint" type="Button" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Hint"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="grid_input_container" type="VBoxContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("5")

[node name="hurt" parent="CanvasLayer/Control/SafeArea" instance=ExtResource("6")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea"]
layout_mode = 2
mouse_filter = 2

[node name="result" parent="CanvasLayer/Control/SafeArea/VBoxContainer" instance=ExtResource("7")]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
mouse_filter = 2

[node name="failed" type="Control" parent="CanvasLayer/Control"]
visible = false
custom_minimum_size = Vector2(425, 370)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.5
offset_top = -185.0
offset_right = 212.5
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/failed"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/failed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/failed/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control/failed/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 28
text = "You failed
the puzzle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/failed/VBoxContainer"]
layout_mode = 2

[node name="main_menu" type="Button" parent="CanvasLayer/Control/failed/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(380, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/failed/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="score" parent="CanvasLayer/Control" instance=ExtResource("11")]
visible = false
layout_mode = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerDelay" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="pressed" from="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer3/score_button" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer/find" to="." method="_on_find_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/safearea/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/HBoxContainer/hint" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/failed/VBoxContainer/CenterContainer/main_menu" to="." method="_on_main_menu_pressed"]
